// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/basic.md correctly 1`] = `
<ul
  class="wmstool-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher_open"
    />
    <span
      class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
    >
      <span
        class="wmstool-tree-checkbox-inner"
      />
    </span>
    <span
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="wmstool-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class="wmstool-tree-treenode-disabled"
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_open wmstool-tree-switcher-disabled"
        />
        <span
          class="wmstool-tree-checkbox wmstool-tree-checkbox-checked wmstool-tree-checkbox-disabled"
        >
          <span
            class="wmstool-tree-checkbox-inner"
          />
        </span>
        <span
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="wmstool-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-checkbox wmstool-tree-checkbox-disabled"
            >
              <span
                class="wmstool-tree-checkbox-inner"
              />
            </span>
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="wmstool-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
            >
              <span
                class="wmstool-tree-checkbox-inner"
              />
            </span>
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="wmstool-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_open"
        />
        <span
          class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
        >
          <span
            class="wmstool-tree-checkbox-inner"
          />
        </span>
        <span
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="wmstool-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
            >
              <span
                class="wmstool-tree-checkbox-inner"
              />
            </span>
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="wmstool-tree-title"
              >
                <span
                  style="color:#1890ff"
                >
                  sss
                </span>
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/basic-controlled.md correctly 1`] = `
<div>
  <ul
    class="wmstool-tree"
    role="tree-node"
    unselectable="on"
  >
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher_open"
      />
      <span
        class="wmstool-tree-checkbox wmstool-tree-checkbox-indeterminate"
      >
        <span
          class="wmstool-tree-checkbox-uninner"
        />
      </span>
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
        title="0-0"
      >
        <span
          class="wmstool-tree-title"
        >
          0-0
        </span>
      </span>
      <ul
        class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
        data-expanded="true"
      >
        <li
          class=""
        >
          <span
            class="wmstool-tree-switcher wmstool-tree-switcher_open"
          />
          <span
            class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
          >
            <span
              class="wmstool-tree-checkbox-uninner"
            />
          </span>
          <span
            class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
            title="0-0-0"
          >
            <span
              class="wmstool-tree-title"
            >
              0-0-0
            </span>
          </span>
          <ul
            class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
            data-expanded="true"
          >
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
              >
                <span
                  class="wmstool-tree-checkbox-uninner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-0-0"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-0-0
                </span>
              </span>
            </li>
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
              >
                <span
                  class="wmstool-tree-checkbox-uninner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-0-1"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-0-1
                </span>
              </span>
            </li>
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
              >
                <span
                  class="wmstool-tree-checkbox-uninner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-0-2"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-0-2
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class=""
        >
          <span
            class="wmstool-tree-switcher wmstool-tree-switcher_open"
          />
          <span
            class="wmstool-tree-checkbox"
          >
            <span
              class="wmstool-tree-checkbox-uninner"
            />
          </span>
          <span
            class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
            title="0-0-1"
          >
            <span
              class="wmstool-tree-title"
            >
              0-0-1
            </span>
          </span>
          <ul
            class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
            data-expanded="true"
          >
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox"
              >
                <span
                  class="wmstool-tree-checkbox-uninner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-1-0"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-1-0
                </span>
              </span>
            </li>
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox"
              >
                <span
                  class="wmstool-tree-checkbox-uninner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-1-1"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-1-1
                </span>
              </span>
            </li>
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox"
              >
                <span
                  class="wmstool-tree-checkbox-uninner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-1-2"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-1-2
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class=""
        >
          <span
            class="wmstool-tree-switcher wmstool-tree-switcher-noop"
          />
          <span
            class="wmstool-tree-checkbox"
          >
            <span
              class="wmstool-tree-checkbox-uninner"
            />
          </span>
          <span
            class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
            title="0-0-2"
          >
            <span
              class="wmstool-tree-title"
            >
              0-0-2
            </span>
          </span>
        </li>
      </ul>
    </li>
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher_close"
      />
      <span
        class="wmstool-tree-checkbox"
      >
        <span
          class="wmstool-tree-checkbox-uninner"
        />
      </span>
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close"
        title="0-1"
      >
        <span
          class="wmstool-tree-title"
        >
          0-1
        </span>
      </span>
    </li>
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher-noop"
      />
      <span
        class="wmstool-tree-checkbox"
      >
        <span
          class="wmstool-tree-checkbox-uninner"
        />
      </span>
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
        title="0-2"
      >
        <span
          class="wmstool-tree-title"
        >
          0-2
        </span>
      </span>
    </li>
  </ul>
  <ul
    class="wmstool-tree"
    role="tree-node"
    unselectable="on"
  >
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher_open"
      />
      <span
        class="wmstool-tree-checkbox wmstool-tree-checkbox-indeterminate"
      >
        <span
          class="wmstool-tree-checkbox-inner"
        />
      </span>
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
        title="0-0"
      >
        <span
          class="wmstool-tree-title"
        >
          0-0
        </span>
      </span>
      <ul
        class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
        data-expanded="true"
      >
        <li
          class=""
        >
          <span
            class="wmstool-tree-switcher wmstool-tree-switcher_open"
          />
          <span
            class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
          >
            <span
              class="wmstool-tree-checkbox-inner"
            />
          </span>
          <span
            class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
            title="0-0-0"
          >
            <span
              class="wmstool-tree-title"
            >
              0-0-0
            </span>
          </span>
          <ul
            class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
            data-expanded="true"
          >
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
              >
                <span
                  class="wmstool-tree-checkbox-inner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-0-0"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-0-0
                </span>
              </span>
            </li>
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
              >
                <span
                  class="wmstool-tree-checkbox-inner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-0-1"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-0-1
                </span>
              </span>
            </li>
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox wmstool-tree-checkbox-checked"
              >
                <span
                  class="wmstool-tree-checkbox-inner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-0-2"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-0-2
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class=""
        >
          <span
            class="wmstool-tree-switcher wmstool-tree-switcher_open"
          />
          <span
            class="wmstool-tree-checkbox"
          >
            <span
              class="wmstool-tree-checkbox-inner"
            />
          </span>
          <span
            class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
            title="0-0-1"
          >
            <span
              class="wmstool-tree-title"
            >
              0-0-1
            </span>
          </span>
          <ul
            class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
            data-expanded="true"
          >
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox"
              >
                <span
                  class="wmstool-tree-checkbox-inner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-1-0"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-1-0
                </span>
              </span>
            </li>
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox"
              >
                <span
                  class="wmstool-tree-checkbox-inner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-1-1"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-1-1
                </span>
              </span>
            </li>
            <li
              class=""
            >
              <span
                class="wmstool-tree-switcher wmstool-tree-switcher-noop"
              />
              <span
                class="wmstool-tree-checkbox"
              >
                <span
                  class="wmstool-tree-checkbox-inner"
                />
              </span>
              <span
                class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
                title="0-0-1-2"
              >
                <span
                  class="wmstool-tree-title"
                >
                  0-0-1-2
                </span>
              </span>
            </li>
          </ul>
        </li>
        <li
          class=""
        >
          <span
            class="wmstool-tree-switcher wmstool-tree-switcher-noop"
          />
          <span
            class="wmstool-tree-checkbox"
          >
            <span
              class="wmstool-tree-checkbox-inner"
            />
          </span>
          <span
            class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
            title="0-0-2"
          >
            <span
              class="wmstool-tree-title"
            >
              0-0-2
            </span>
          </span>
        </li>
      </ul>
    </li>
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher_close"
      />
      <span
        class="wmstool-tree-checkbox"
      >
        <span
          class="wmstool-tree-checkbox-inner"
        />
      </span>
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close"
        title="0-1"
      >
        <span
          class="wmstool-tree-title"
        >
          0-1
        </span>
      </span>
    </li>
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher-noop"
      />
      <span
        class="wmstool-tree-checkbox"
      >
        <span
          class="wmstool-tree-checkbox-inner"
        />
      </span>
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
        title="0-2"
      >
        <span
          class="wmstool-tree-title"
        >
          0-2
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/tree/demo/customized-icon.md correctly 1`] = `
<ul
  class="wmstool-tree wmstool-tree-show-line"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher_open"
    />
    <span
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="wmstool-tree-iconEle wmstool-tree-icon__open"
      />
      <span
        class="wmstool-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_open"
        />
        <span
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open wmstool-tree-node-selected"
          title="parent 1-0"
        >
          <span
            class="wmstool-tree-iconEle wmstool-tree-icon__open"
          />
          <span
            class="wmstool-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="wmstool-tree-iconEle wmstool-tree-icon__docu"
              />
              <span
                class="wmstool-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="wmstool-tree-iconEle wmstool-tree-icon__docu"
              />
              <span
                class="wmstool-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_open"
        />
        <span
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="wmstool-tree-iconEle wmstool-tree-icon__open"
          />
          <span
            class="wmstool-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="wmstool-tree-iconEle wmstool-tree-icon__docu"
              />
              <span
                class="wmstool-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher-noop"
        />
        <span
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="wmstool-tree-iconEle wmstool-tree-icon__docu"
          />
          <span
            class="wmstool-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/draggable.md correctly 1`] = `
<ul
  class="wmstool-tree draggable-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher_open"
    />
    <span
      aria-grabbed="true"
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open draggable"
      draggable="true"
      title="0-0"
    >
      <span
        class="wmstool-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_open"
        />
        <span
          aria-grabbed="true"
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open draggable"
          draggable="true"
          title="0-0-0"
        >
          <span
            class="wmstool-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-0"
            >
              <span
                class="wmstool-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-1"
            >
              <span
                class="wmstool-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-2"
            >
              <span
                class="wmstool-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_close"
        />
        <span
          aria-grabbed="true"
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close draggable"
          draggable="true"
          title="0-0-1"
        >
          <span
            class="wmstool-tree-title"
          >
            0-0-1
          </span>
        </span>
      </li>
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher-noop"
        />
        <span
          aria-grabbed="true"
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal draggable"
          draggable="true"
          title="0-0-2"
        >
          <span
            class="wmstool-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher_close"
    />
    <span
      aria-grabbed="true"
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close draggable"
      draggable="true"
      title="0-1"
    >
      <span
        class="wmstool-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher-noop"
    />
    <span
      aria-grabbed="true"
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal draggable"
      draggable="true"
      title="0-2"
    >
      <span
        class="wmstool-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/dynamic.md correctly 1`] = `
<ul
  class="wmstool-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher_close"
    />
    <span
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="wmstool-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher_close"
    />
    <span
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="wmstool-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher-noop"
    />
    <span
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
      title="Tree Node"
    >
      <span
        class="wmstool-tree-title"
      >
        Tree Node
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/line.md correctly 1`] = `
<ul
  class="wmstool-tree wmstool-tree-show-line"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="wmstool-tree-switcher wmstool-tree-switcher_open"
    />
    <span
      class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="wmstool-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_open"
        />
        <span
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="wmstool-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="wmstool-tree-child-tree wmstool-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="wmstool-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="wmstool-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="wmstool-tree-switcher wmstool-tree-switcher-noop"
            />
            <span
              class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="wmstool-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_close"
        />
        <span
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close"
          title="parent 1-1"
        >
          <span
            class="wmstool-tree-title"
          >
            parent 1-1
          </span>
        </span>
      </li>
      <li
        class=""
      >
        <span
          class="wmstool-tree-switcher wmstool-tree-switcher_close"
        />
        <span
          class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close"
          title="parent 1-2"
        >
          <span
            class="wmstool-tree-title"
          >
            parent 1-2
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/search.md correctly 1`] = `
<div>
  <span
    class="wmstool-input-search wmstool-input-affix-wrapper"
    style="margin-bottom:8px"
  >
    <input
      class="wmstool-input"
      placeholder="Search"
      type="text"
    />
    <span
      class="wmstool-input-suffix"
    >
      <i
        class="anticon anticon-search wmstool-input-search-icon"
      />
    </span>
  </span>
  <ul
    class="wmstool-tree"
    role="tree-node"
    unselectable="on"
  >
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher_close"
      />
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="wmstool-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-0
          </span>
        </span>
      </span>
    </li>
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher_close"
      />
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="wmstool-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-1
          </span>
        </span>
      </span>
    </li>
    <li
      class=""
    >
      <span
        class="wmstool-tree-switcher wmstool-tree-switcher-noop"
      />
      <span
        class="wmstool-tree-node-content-wrapper wmstool-tree-node-content-wrapper-normal"
        title=""
      >
        <span
          class="wmstool-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-2
          </span>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
